Bedrock-initiated block editing + PE spawn polish
A Bedrock player can now break and place blocks, and edits propagate to
every client on both editions (Java-initiated editing already worked).

- Break: the Win10 1.1.5 client reports breaks via PlayerAction (0x24)
  CONTINUE_BREAK, which carries the block position (StopBreak arrives with
  0,0,0) — decoded from captured bytes; InventoryTransaction is never sent.
- Place: decoded from the client's use-item packet (0x23) — block position,
  face, and the held Item slot, offset by the face into the world.
- Item slot (de)serialization (id, aux, NBT len, can-place/destroy lists)
  shared between the inbound decode and the outbound hotbar.
- Movement-speed attribute (UpdateAttributes) tames the runaway PE
  acceleration; a starter creative hotbar (InventoryContent) gives a joining
  Bedrock player blocks to build with.
- Blocks.isKnown accepts the full legacy 0-255 range; getSafeId falls back
  to stone. (Note: the 4-bit JE chunk palette caps a section at 16 states.)

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>